# TextShine

./: .gitignore  README.md  app  com.github.phase1geo.textshine.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml  main.yml
data/: com.github.phase1geo.textshine.appdata.xml  com.github.phase1geo.textshine.appdata.xml.in  com.github.phase1geo.textshine.desktop  com.github.phase1geo.textshine.desktop.in  com.github.phase1geo.textshine.gresource.xml  com.github.phase1geo.textshine.gschema.xml  com.github.phase1geo.textshine.shortcuts.ui  io.github.phase1geo.textshine.appdata.xml  io.github.phase1geo.textshine.appdata.xml.in  io.github.phase1geo.textshine.desktop  io.github.phase1geo.textshine.desktop.in  io.github.phase1geo.textshine.gresource.xml  io.github.phase1geo.textshine.gschema.xml  io.github.phase1geo.textshine.shortcuts.ui  meson.build
data/css/: style.css
debian/: control
elementary/: io.github.phase1geo.textshine.yml
flathub/: io.github.phase1geo.textshine.yml
po/: POTFILES  com.github.phase1geo.textshine.pot  de.po  io.github.phase1geo.textshine.pot  it.po  nl.po
po/extra/: POTFILES  de.po  extra.pot  it.po  nl.po
src/: About.vala  Application.vala  Batcher.vala  CodeHandler.vala  CustomFunction.vala  Editor.vala  GlobalSetting.vala  GlobalSettings.vala  InfoBox.vala  MainWindow.vala  Preferences.vala  SettingsUpdater.vala  Sidebar.vala  SidebarBox.vala  SidebarCustom.vala  SidebarCustomSettings.vala  SidebarFunctions.vala  SpellChecker.vala  TextChange.vala  TextFunction.vala  TextFunctions.vala  UndoBuffer.vala  UndoCustom.vala  UndoCustomBuffer.vala  UndoCustomItem.vala  UndoItem.vala  UndoReplacements.vala  UndoSelects.vala  Utils.vala  emmet.vala  emmet_css.vala  meson.build
src/emmet/: emmet_helper.vala  emmet_lexer.l  emmet_parser.y  meson.build
src/functions/: CaseCamel.vala  CaseLower.vala  CaseSentence.vala  CaseTitle.vala  CaseUpper.vala  IndentXML.vala  RegExpr.vala  ReplacePeriodsEllipsis.vala  ReplaceTabsSpaces.vala  ReplaceTabsSpaces4.vala  SortLines.vala  SortReverse.vala  SortReverseChars.vala  meson.build
src/functions/case/: CaseCamel.vala  CaseLower.vala  CaseROT13.vala  CaseRandom.vala  CaseSentence.vala  CaseSnake.vala  CaseTitle.vala  CaseUpper.vala  meson.build
src/functions/convert/: ConvertBase64.vala  ConvertChecksum.vala  ConvertHardWrap.vala  ConvertMarkdownHTML.vala  ConvertMarkdownTable.vala  ConvertROT13.vala  ConvertURL.vala  ConvertURLEncode.vala  meson.build
src/functions/indent/: Indent.vala  IndentDelim.vala  IndentXML.vala  Unindent.vala  meson.build
src/functions/insert/: InsertFile.vala  InsertLineEnd.vala  InsertLineNumbers.vala  InsertLineStart.vala  InsertLoremIpsum.vala  InsertNewline.vala  InsertText.vala  InsertURL.vala  meson.build
src/functions/markdown/: ConvertMarkdownHTML.vala  MarkdownCheckbox.vala  MarkdownComplete.vala  MarkdownReferences.vala  MarkdownTableBeauty.vala  MarkdownTask.vala  MarkdownTaskAdd.vala  MarkdownTaskComplete.vala  MarkdownTaskDelete.vala  MarkdownTaskIncomplete.vala  MarkdownTaskRemoveCompleted.vala  meson.build
src/functions/match/: ClearSelected.vala  Find.vala  InvertSelected.vala  RegExpr.vala  ReplaceSelected.vala  meson.build
src/functions/quotes/: QuotesAngled.vala  QuotesCJK.vala  QuotesCurved.vala  QuotesDoubleSingle.vala  QuotesGerman.vala  QuotesStraight.vala  meson.build
src/functions/remove/: RemoveBlankLines.vala  RemoveDuplicateLines.vala  RemoveLeadingWhitespace.vala  RemoveLineBreaks.vala  RemoveLineNumbers.vala  RemoveSelected.vala  RemoveTrailingWhitespace.vala  meson.build
src/functions/repair/: FixSpaces.vala  meson.build
src/functions/replace/: ReplacePeriodsEllipsis.vala  ReplaceReturnSpace.vala  ReplaceReturns.vala  ReplaceSelected.vala  ReplaceTabsSpaces.vala  ReplaceTabsSpaces4.vala  meson.build
src/functions/sort/: Randomize.vala  SortLines.vala  SortMoveLines.vala  SortReverseChars.vala  meson.build
src/settings/: BlockCommentSetting.vala  LineCommentSetting.vala  StringSetting.vala  meson.build
vapi/: libemmet.vapi
