sources += files(

    'functions/case/CaseCamel.vala',
    'functions/case/CaseLower.vala',
    'functions/case/CaseSentence.vala',
    'functions/case/CaseSnake.vala',
    'functions/case/CaseTitle.vala',
    'functions/case/CaseUpper.vala',

    'functions/indent/IndentXML.vala',

    'functions/insert/InsertLineEnd.vala',
    'functions/insert/InsertLineStart.vala',
    'functions/insert/InsertLineNumbers.vala',

    'functions/match/RegExpr.vala',

    'functions/remove/RemoveBlankLines.vala',
    'functions/remove/RemoveDuplicateLines.vala',
    'functions/remove/RemoveLeadingWhitespace.vala',
    'functions/remove/RemoveLineNumbers.vala',
    'functions/remove/RemoveTrailingWhitespace.vala',

    'functions/replace/ReplacePeriodsEllipsis.vala',
    'functions/replace/ReplaceTabsSpaces.vala',

    'functions/sort/SortLines.vala',
    'functions/sort/SortReverseChars.vala',

    'Application.vala',
    'CustomFunction.vala',
    'Editor.vala',
    'MainWindow.vala',
    'Sidebar.vala',
    'TextChange.vala',
    'TextFunction.vala',
    'TextFunctions.vala',
    'Utils.vala'

)
