sources += files(

    'functions/case/CaseCamel.vala',
    'functions/case/CaseLower.vala',
    'functions/case/CaseRandom.vala',
    'functions/case/CaseSentence.vala',
    'functions/case/CaseSnake.vala',
    'functions/case/CaseTitle.vala',
    'functions/case/CaseUpper.vala',

    'functions/convert/ConvertBase64.vala',
    'functions/convert/ConvertChecksum.vala',
    'functions/convert/ConvertHardWrap.vala',
    'functions/convert/ConvertROT13.vala',
    'functions/convert/ConvertURLEncode.vala',

    'functions/indent/Indent.vala',
    'functions/indent/IndentXML.vala',
    'functions/indent/Unindent.vala',

    'functions/insert/InsertFile.vala',
    'functions/insert/InsertLineNumbers.vala',
    'functions/insert/InsertLoremIpsum.vala',
    'functions/insert/InsertText.vala',

    'functions/markdown/ConvertMarkdownHTML.vala',
    'functions/markdown/MarkdownReferences.vala',
    'functions/markdown/MarkdownTableBeauty.vala',
    'functions/markdown/MarkdownTask.vala',

    'functions/match/ClearSelected.vala',
    'functions/match/Find.vala',
    'functions/match/InvertSelected.vala',
    'functions/match/RegExpr.vala',
    'functions/match/ReplaceSelected.vala',

    'functions/quotes/QuotesAngled.vala',
    'functions/quotes/QuotesCJK.vala',
    'functions/quotes/QuotesCurved.vala',
    'functions/quotes/QuotesDoubleSingle.vala',
    'functions/quotes/QuotesGerman.vala',
    'functions/quotes/QuotesStraight.vala',

    'functions/remove/RemoveBlankLines.vala',
    'functions/remove/RemoveDuplicateLines.vala',
    'functions/remove/RemoveLeadingWhitespace.vala',
    'functions/remove/RemoveLineBreaks.vala',
    'functions/remove/RemoveLineNumbers.vala',
    'functions/remove/RemoveSelected.vala',
    'functions/remove/RemoveTrailingWhitespace.vala',

    'functions/repair/FixSpaces.vala',

    'functions/replace/ReplacePeriodsEllipsis.vala',
    'functions/replace/ReplaceReturns.vala',
    'functions/replace/ReplaceReturnSpace.vala',
    'functions/replace/ReplaceTabsSpaces.vala',

    'functions/sort/SortLines.vala',
    'functions/sort/SortMoveLines.vala',
    'functions/sort/SortReverseChars.vala',

    'Application.vala',
    'CustomFunction.vala',
    'Editor.vala',
    'MainWindow.vala',
    'Sidebar.vala',
    'SidebarBox.vala',
    'SidebarCustom.vala',
    'SidebarFunctions.vala',
    'TextFunction.vala',
    'TextFunctions.vala',
    'UndoBuffer.vala',
    'UndoCustomBuffer.vala',
    'UndoCustomItem.vala',
    'UndoItem.vala',
    'Utils.vala'

)
