sources += files(

    'Application.vala',
    'CustomFunction.vala',
    'Editor.vala',
    'MainWindow.vala',
    'Preferences.vala',
    'Sidebar.vala',
    'SidebarBox.vala',
    'SidebarCustom.vala',
    'SidebarFunctions.vala',
    'SpellChecker.vala',
    'TextFunction.vala',
    'TextFunctions.vala',
    'UndoBuffer.vala',
    'UndoCustomBuffer.vala',
    'UndoCustomItem.vala',
    'UndoItem.vala',
    'Utils.vala'

)

subdir('functions')
